--- a/WordOnline/Views/Home/Index.cshtml
+++ b/WordOnline/Views/Home/Index.cshtml
@@ -1,8 +1,35 @@
 ﻿@{
-    ViewData["Title"] = "Word";
+    ViewData["Title"] = "Word Online";
 }
 
+@model IEnumerable<Documento>
+
+<h1 class="text-center">Arquivos do Word</h1>
+
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <a class="d-flex justify-content-center align-items-center"
+       style="width: 150px; height: 200px; background-color: lightsteelblue; font-size: 100px; text-decoration: none; color: black;"
+       asp-action="CriarDocumento">
+        +
+    </a>
+</div>
+
+<hr>
+
+<div class="row">
+    <h2 class="text-center mb-4">Arquivos Salvos</h2>
+    
+    @foreach (var item in Model)
+    {
+        <div class="col-2">
+            <span>Criado @item.DataCriacao.ToString("dd/MM/yyyy HH:mm")</span>
+            <div class="d-flex justify-content-center align-items-center"
+                 style="width: 150px; height: 200px; background-color: lightsteelblue; font-size: 100px;">
+                <a style="text-decoration: none; color: black" asp-action="EditarDocumento" asp-route-id="@item.Id">
+                    📝
+                </a>
+            </div>
+            <span style="font-weight: bold">@item.Titulo</span>
+        </div>
+    }
 </div>
