--- a/WordOnline/Views/Home/CriarDocumento.cshtml
+++ b/WordOnline/Views/Home/CriarDocumento.cshtml
@@ -9,7 +9,7 @@
                     <input asp-for="Titulo" class="form-control" placeholder="Título">
                 </div>
                 <div class="form-group mb-3">
-                    <textarea asp-for="Conteudo" style="width: 100%; height: 60vh;"></textarea>
+                    <textarea id="tiny" asp-for="Conteudo" style="width: 100%; height: 60vh;"></textarea>
                 </div>
                 <input type="submit" class="btn btn-primary w-100" value="Criar">
                 <a asp-action="Index" class="btn btn-info mt-3 w-100">Voltar</a>
